# minilink

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPILATION_REFACTOR.md  COMPILED_API_PLAN.md  CONVENTIONS.md  DESIGN.md  LICENSE  PACKAGE_LAYOUT.md  PLAN_opti.md  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  _scratch_render.py  agent.md  analysis.py  analysis_and_todos.md  architecture.md  architecture_report.md  basic.py  basic_with_dict.py  big_diagram.py  cursor.md  demo.ipynb  diagram.py  diagram_test.py  drake_analysis.md  environment.yml  flows.md  framework.py  graphical.py  implementation_plan.md  kinematic-contract-upgrade_394627b5.plan.md  minilink_demo.ipynb  minilink_tests.py  pendulum.py  plan.md  pluggable_implementations.md  pycollimator_analysis.md  pyproject.toml  (+10 more)
.cursor/plans/: port_cartpole_doublependulum.md
.cursor/rules/: read-agent-first.mdc
.github/workflows/: docs.yml  test.yml
benchmarks/: README.md  __init__.py  common.py  dynamic_programming.py  f_evaluators.py  optimization.py  planning_rrt.py  pyro_parity.py  pyro_parity_worker.py  run_diagram_f_speed.py  run_dp_backends.py  run_optimizer_backends.py  run_pendulum_f_speed.py  run_pyro_minilink_parity.py  run_rrt_nearest_backends.py  run_simulator_speed_manual.py  run_simulator_speed_matrix.py  run_simulator_standard.py  run_trajopt_backends.py  run_trajopt_solver_presets.py  simulation.py  trajopt.py
benchmarks/systems/: __init__.py  basic.py  engine.py  network.py
docs/: catalog_eom.tex  conf.py  graphical-backends-plan.md  index.rst  roadmap.rst  simulator_backend_refactor.md
docs/_static/: custom.css
docs/api/: analysis.rst  blocks.rst  compile.rst  control.rst  core.rst  dynamics.rst  experimental.rst  graphical.rst  optimization.rst  planning.rst  simulation.rst
docs/plans/: README.md  catalog-migration-notes.md  custom-system-ports-implementation-plan.md  environment-pipeline.md  hybrid-discrete-simulation.md  inverse-kinematics.md  manipulator-abstraction.md  neural-blocks-collection.md  planning-pipeline-architecture.md  pyro-port-gap-todo.md  pyro-port-remaining.md  robot-control-stack.md  rrt-search.md  tool-migration-notes.md  vehicle-abstraction.md
examples/: demo_advanced_plotting.py
examples/diagram_editor_mvp/: server.py
examples/diagram_editor_web/: README.md  index.html  package-lock.json  package.json  server.py
examples/notebooks/: NOTEBOOK_REFACTOR_PLAN.md  demo.ipynb  demo_animations.ipynb  demo_colab.ipynb  demo_dynamic_bicycle_rate_mpc_straight_line.ipynb  demo_mpc_spatial_scene_guide.ipynb  demo_optimization.ipynb  demo_overview.ipynb  demo_plots_animations_backends.ipynb  demo_showcase.ipynb  demo_simple_optimization.ipynb  demo_stateless_functional_jax.ipynb  simulation_benchmark.ipynb
examples/scripts/: demo_animations.py  demo_cartpole_direct_collocation.py  demo_cartpole_jax_direct_collocation.py  demo_cartpole_jax_multiple_shooting.py  demo_cartpole_jax_shooting.py  demo_cartpole_multiple_shooting.py  demo_cartpole_shooting.py  demo_closed_loop.py  demo_compile.py  demo_diagram_compiling.py  demo_dynamic_bicycle.py  demo_dynamic_bicycle_offroad.py  demo_dynamic_bicycle_realistic.py  demo_force_arrow.py  demo_interactive.py  demo_interactive_mode.py  demo_internal_signals.py  demo_jax_dynamic_bicycle_trajopt.py  demo_nested_loop_diagram.py  demo_noise_ports.py  demo_physics_jax_sphere_plane.py  demo_physics_jax_sphere_plane_many_spheres.py  demo_sources.py  demo_symbolic_quadruple_pendulum.py  demo_trajopt_live_plot.py
graphical_refactor_plan/: 00_original_vision.md  01_master_overview.md  02_demo_use_cases.md  03_kinematics_core_math.md  README.md
graphical_refactor_plan/phases/: phase0_baselines.md  phase1_foundation.md  phase2_v2_pipeline.md  phase3_catalog_migration.md  phase4_demos.md  phase5_cutover.md  phase6_overlays.md  phase7_collision.md
minilink/: NOTES_UTILISATION.txt  jax_utils.py
minilink/analysis/: __init__.py  equilibria.py  frequency.py  linearize.py  modal.py  structural.py
minilink/benchmark/: __init__.py  f_speed.py  simulation_speed.py  standard_sim_cases.py
minilink/blocks/: __init__.py  basic.py  dynamic_bicycle.py  examples.py  filters.py  neural.py  nonlinear.py  routing.py  sources.py  tests.py  transfer_function.py
minilink/compile/: __init__.py  api.py  backend_policy.py  benchmark.py  compiler.py  evaluator.py  evaluator_timing.py  execution_plan.py  ir.py  jax_backend.py  jax_evaluator.py  jax_utils.py  numpy_backend.py  numpy_evaluator.py
minilink/control/: __init__.py  constant_ref.py  full_bicycle_meas.py  generic_meas.py  generic_pid.py  generic_pid_SL.py  impedance.py  linear.py  lqr.py  measurement.py  modelbased.py  motor_map.py  output.py  pendulum_pd.py  pid.py  references.py  robotic.py  siso.py  state.py  steering_map.py
minilink/core/: __init__.py  analysis.py  backends.py  composition.py  costs.py  diagram.py  diagram_topology.py  facades.py  framework.py  geometry.py  jax_utils.py  kinematics.py  sets.py  signals.py  system.py  trajectory.py
minilink/dynamics/: __init__.py
minilink/estimation/: __init__.py
minilink/graphical/: animation.py  diagram_export.py  environment.py  graphe.py  matplotlib_style.py  phase_plane.py  plotting.py  primitives.py  time_signals.py
minilink/identification/: __init__.py
minilink/interfaces/: __init__.py
minilink/mechanics/: __init__.py  _array_api.py  mechanical.py
minilink/optimization/: __init__.py  backends.py  benchmark.py  mathematical_program.py  optimizer.py  problems.py  reporting.py  scipy.py
minilink/physics/: __init__.py  engine_jax.py  system.py
minilink/planning/: __init__.py  base.py  costs.py  discretization.py  dynamic_programming.py  initial_guess.py  optimization_backends.py  planner.py  problems.py  search.py  sets.py  solutions.py  trajectory_optimization.py
projects/bicycle/: README.md  (+1 more)
scripts/: check_render_v2_parity.py  generate_kinematic_baselines.py
tests/: README.md  test_advanced_plotting.py  test_algebraic_loop.py  test_closed_loop.py  test_core.py  test_f_compare.py  test_graphical.py  tests_alex.py
(+497 files in other folders)
