[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "minilink"
dynamic = ["version"]
description = "A block-diagram simulation framework built in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
visualization = [
    "meshcat",
    "pygame",
]
symbolic = [
    "sympy>=1.12",
]
jax = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
]
ipopt = [
    "cyipopt>=1.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "minilink/_version.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/unittest",
]
pythonpath = "."
markers = [
    "optional: tests that require optional dependency extras",
    "jax: tests that require the jax extra",
    "symbolic: tests that require the symbolic extra",
    "visualization: tests that require the visualization extra",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "minilink/_version.py"
