[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "minilink"
dynamic = ["version"]
description = "Python-native block-diagram framework for modeling, simulating, optimizing, and visualizing dynamical systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alexandre Girard", email = "alx87grd@gmail.com" },
]
keywords = [
    "simulation",
    "control-systems",
    "dynamical-systems",
    "block-diagram",
    "optimization",
    "trajectory-planning",
    "model-predictive-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "graphviz",
]

[project.urls]
Homepage = "https://github.com/alx87grd/minilink"
Repository = "https://github.com/alx87grd/minilink"
Documentation = "https://alx87grd.github.io/minilink/"
Issues = "https://github.com/alx87grd/minilink/issues"
Changelog = "https://github.com/alx87grd/minilink/blob/main/ROADMAP.md"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]
docs = [
    "sphinx>=7",
    "furo>=2024.8.6",
]
visualization = [
    "meshcat",
    "pygame",
]
plotting = [
    "plotly",
]
symbolic = [
    "sympy>=1.12",
]
jax = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
]
ipopt = [
    "cyipopt>=1.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "minilink/_version.py",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
# E741 flags one-letter names that resemble 1/I/O; disabled for textbook symbols (e.g. link length ``l``).
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/unittest",
]
pythonpath = "."
markers = [
    "optional: tests that require optional dependency extras",
    "jax: tests that require the jax extra",
    "symbolic: tests that require the symbolic extra",
    "visualization: tests that require the visualization extra",
    "plotting: tests that require the plotting extra",
    "ipopt: tests that require the ipopt extra",
]

[tool.hatch.version]
source = "vcs"
# Ignore non-semver tags such as pre-phase5-cutover; use latest 0.* release tag.
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
git_describe_command = "git describe --dirty --tags --long --match '0.*'"

[tool.hatch.build.targets.wheel]
# Only the library ships; tests/ and benchmarks/ stay repo-only.
packages = ["minilink"]

[tool.hatch.build.hooks.vcs]
version-file = "minilink/_version.py"
